--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
     "version": "1.0.0",
     "main": "server.js",
     "dependencies": {
-        "axios": "^0.21.1",
-        "bcrypt": "^5.1.1",
-        "cheerio": "^1.0.0",
-        "cors": "^2.8.5",
-        "dotenv": "^8.6.0",
-        "express": "^4.21.0",
-        "express-validator": "^7.2.0",
-        "jsonwebtoken": "^8.5.1",
-        "mongodb": "^6.9.0",
-        "mongoose": "^6.13.3",
-        "puppeteer": "^23.5.0",
-        "stripe": "^8.222.0"
+      "axios": "^1.6.2",
+      "bcrypt": "^5.1.1",
+      "cheerio": "^1.0.0-rc.12",
+      "cors": "^2.8.5",
+      "dotenv": "^16.3.1",
+      "express": "^4.18.2",
+      "express-validator": "^7.0.1",
+      "jsonwebtoken": "^9.0.2",
+      "mongodb": "^6.3.0",
+      "mongoose": "^8.0.3",
+      "puppeteer": "^21.6.1",
+      "stripe": "^14.9.0"
+    },
+    "scripts": {
+      "start": "node server.js",
+      "dev": "nodemon server.js"
+    },
+    "devDependencies": {
+      "nodemon": "^3.0.2"
     }
-}
+  }
