--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "seo-saas-server",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -11,12 +15,13 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "puppeteer": "^21.6.1",
     "stripe": "^14.9.0"
   },
-  "scripts": {
-    "start": "node server.js"
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
